LPD-60078 Remove MaxPermSize from _JDK_PARAMETERS_8 to avoid duplication
MaxPermSize is already set in JAVA_OPTS, so including it in _JDK_PARAMETERS_8 would result in it being passed twice.