@@ -24,7 +24,7 @@ function set_up {
 	export _CURRENT_JAVA_HOME="${JAVA_HOME}"
 	export _CURRENT_JAVA_OPTS="${JAVA_OPTS}"
 	export _CURRENT_PATH="${PATH}"
-	export _JDK_PARAMETERS_8="${JAVA_OPTS} -XX:MaxPermSize=256m"
+	export _JDK_PARAMETERS_8="${JAVA_OPTS}"
 	export _JDK_PARAMETERS_17=$(echo "${JAVA_OPTS}" | sed "s/-XX:MaxPermSize=[^ ]*//g")
 
 	export _JDK_VERSION_8="zulu8"
@@ -64,8 +64,6 @@ function tear_down {
 
 function test_jdk_set_jdk_version_and_parameters {
 	_test_jdk_set_jdk_version_and_parameters "2024.q2.0" "/opt/java/${_JDK_VERSION_8}" "${_JDK_PARAMETERS_8}"
-
-	JAVA_OPTS="-XX:MaxPermSize=256m"
 
 	_test_jdk_set_jdk_version_and_parameters "2024.q3.0" "/opt/java/${_JDK_VERSION_8}" "${JAVA_OPTS}"
 
